# aiapi

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  config.example.json  config.json  config.sqlite.example.json  config.yaml  docker-compose.env.yml  docker-compose.volume.yml  docker-compose.yml  main.cc
accountManager/: accountManager.cpp  accountManager.h
apiManager/: ApiManager.h  Apicomn.h
apipoint/chaynsapi/: chaynsapi.cpp  chaynsapi.h
controllers/: AiApi.cc  AiApi.h
doc/: Untitled  aiapi 错误统计与监控方案（设计文档）  aiapi_callflow_and_api_examples.md  development-plan.md  error_stats_dev_plan.md  optimization-report.md  service_status_monitoring_design.md
doc/session/: README.md  session_continuity_refactor_design.md  session_continuity_refactor_development_plan.md
sessionManager/: Session.cpp  Session.h
src/: CMakeLists.txt  config.example.json  config.json  config.yaml  main.cc
src/accountManager/: accountManager.cpp  accountManager.h
src/apiManager/: ApiFactory.cpp  ApiFactory.h  ApiManager.cpp  ApiManager.h  Apicomn.h
src/apipoint/: APIinterface.h  ProviderResult.h
src/apipoint/chaynsapi/: chaynsapi.cpp  chaynsapi.h
src/apipoint/nexosapi/: nexosapi.cpp  nexosapi.h
src/apipoint/openai/: OpenAiProvider.cpp  OpenAiProvider.h
src/apipoint/retoolapi/: retoolapi.cpp  retoolapi.h
src/channelManager/: channelManager.cpp  channelManager.h
src/controllers/: AccountController.cc  AccountController.h  AdminAuthFilter.h  AiApi.cc  AiApi.h  AiApiController.cc  AiApiController.h  ChannelController.cc  ChannelController.h  ControllerUtils.h  HealthController.cc  HealthController.h  LogController.cc  LogController.h  MetricsController.cc  MetricsController.h  RateLimitFilter.h  RetoolWorkspaceController.cc  RetoolWorkspaceController.h
src/controllers/sinks/: ChatJsonSink.cpp  ChatJsonSink.h  ChatSseSink.cpp  ChatSseSink.h  ResponsesJsonSink.cpp  ResponsesJsonSink.h  ResponsesSseSink.cpp  ResponsesSseSink.h
src/dbManager/: DbType.h
src/dbManager/account/: accountBackupDbManager.cpp  accountBackupDbManager.h  accountDbManager.cpp  accountDbManager.h
src/dbManager/channel/: channelDbManager.cpp  channelDbManager.h
src/dbManager/config/: ConfigDbManager.cpp  ConfigDbManager.h
src/dbManager/metrics/: ErrorStatsDbManager.cpp  ErrorStatsDbManager.h  StatusDbManager.cpp  StatusDbManager.h
src/dbManager/retoolWorkspace/: RetoolWorkspaceDbManager.cpp  RetoolWorkspaceDbManager.h
src/managedAccount/backends/: ClassicProviderAccountBackend.cpp  ClassicProviderAccountBackend.h  IManagedAccountBackend.h  RetoolWorkspaceBackend.cpp  RetoolWorkspaceBackend.h
src/managedAccount/contracts/: ManagedAccount.h
src/managedAccount/service/: ManagedAccountService.cpp  ManagedAccountService.h
src/metrics/: ErrorEvent.h  ErrorStatsConfig.cpp  ErrorStatsConfig.h  ErrorStatsService.cpp  ErrorStatsService.h
src/modelsManager/: Model.h  ModelsManager.h  Modelsmanager.cpp
src/retoolWorkspace/: RetoolWorkspaceInfo.h  RetoolWorkspaceManager.cpp  RetoolWorkspaceManager.h  RetoolWorkspaceService.cpp  RetoolWorkspaceService.h
src/sessionManager/: ClientOutputSanitizer.cpp  ClientOutputSanitizer.h  ContinuityResolver.cpp  ContinuityResolver.h  Errors.h  GenerationEvent.h  GenerationRequest.h  GenerationService.cpp  GenerationService.h  IResponseSink.h  README.md  RequestAdapters.cpp  RequestAdapters.h  ResponseIndex.cpp  ResponseIndex.h  Session.cpp  Session.h  SessionExecutionGate.h  TextExtractor.cpp  TextExtractor.h  ToolCallBridge.cpp  ToolCallBridge.h  ToolCallValidator.cpp  ToolCallValidator.h  XmlTagToolCallCodec.cpp  XmlTagToolCallCodec.h
src/sessionManager/continuity/: ContinuityResolver.cpp  ContinuityResolver.h  README.md  ResponseIndex.cpp  ResponseIndex.h  TextExtractor.cpp  TextExtractor.h
src/sessionManager/contracts/: GenerationEvent.h  GenerationRequest.h  IResponseSink.h  README.md
src/sessionManager/core/: ClientOutputSanitizer.cpp  ClientOutputSanitizer.h  Errors.h  GenerationService.cpp  GenerationService.h  GenerationServiceEmitAndToolBridge.cpp  README.md  RequestAdapters.cpp  RequestAdapters.h  Session.cpp  Session.h  SessionExecutionGate.h
src/sessionManager/tooling/: BridgeHelpers.cpp  BridgeHelpers.h  ForcedToolCallGenerator.cpp  ForcedToolCallGenerator.h  README.md  StrictClientRules.cpp  StrictClientRules.h  ToolCallBridge.cpp  ToolCallBridge.h  ToolCallNormalizer.cpp  ToolCallNormalizer.h  ToolCallValidator.cpp  ToolCallValidator.h  ToolDefinitionEncoder.cpp  ToolDefinitionEncoder.h  XmlTagToolCallCodec.cpp  XmlTagToolCallCodec.h
src/test/: CMakeLists.txt  test_continuity_resolver.cpp  test_error_event.cpp  test_error_stats_config.cpp  test_forced_tool_call.cpp  test_generation_service_emit.cpp  test_main.cc  test_normalize_tool_args.cpp  test_request_adapters.cpp  test_response_index.cpp  test_sinks.cpp  test_strict_client_rules.cpp  test_tool_call_validator.cpp  test_xml_tool_call_codec.cpp
src/tools/: ZeroWidthEncoder.cpp  ZeroWidthEncoder.h
src/tools/accountlogin/: chayns-login.service  loginlocal.py  test.py
src/tools/sendMessage/: log2s.txt  logs.txt  postImage.py
src/utils/: BackgroundTaskQueue.h  ConfigValidator.cpp  ConfigValidator.h
tools/accountlogin/: loginlocal.py  loginremote.py
